# xilers

./: .gitignore  Cargo.toml  README.md  _config.toml
src/client/: config.rs  main.rs  mod.rs  network.rs
src/client/network/tcp/: network.rs
src/client/ui/: interface.rs  mod.rs  request.rs
src/client/ui/cli/: action.rs  cli.rs  interface.rs  mod.rs
src/client/ui/gui/: interface.rs
src/device/: file_sys.rs  mod.rs  spec.rs
src/master/: main.rs
src/master/server/: api.rs  db.rs  device_manager.rs  error_handler.rs  handler.rs  log.rs  mod.rs  request_handler.rs  server.rs
src/master/server/api/: delete.rs  get.rs  post.rs
src/master/server/ws/: connection.rs  lobby.rs  messages.rs  mod.rs  websocket.rs
