[package]
name = "xilers"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
sysinfo = "0.27"
mongodb = "3.0.1"
tokio = { version = "1.39.2", features = ["full"] }

[lib]
name = "device"
path = "src/mod.rs"

[[bin]]
name = "client"
path = "src/client/main.rs"

[[bin]]
name = "master"
path = "src/master/main.rs"
