[package]
name = "xilers"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
sysinfo = "0.27"
mongodb = "3.0.1"
tokio = { version = "1.39.2", features = ["full"] }
chrono = "0.4"
regex = "1"
actix-web-actors = "4"
actix-web = "4"
actix = "0.13"
toml = "0.8.19"

# client
reqwest = "0.11"
signal-hook = "0.3"
colored = "2.0"

[dependencies.uuid]
version = "1.10.0"
features = ["v4", "fast-rng", "macro-diagnostics"]

[dependencies.iced]
features = ["palette", "tokio", "wgpu", "tiny-skia"]
git = "https://github.com/hecrj/iced.git"
rev = "0b459c8e240abf83bb62902a504c018194acdbb6"

[lib]
name = "device"
path = "src/mod.rs"

[[bin]]
name = "client"
path = "src/client/main.rs"

[[bin]]
name = "master"
path = "src/master/main.rs"
